--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>supermario_js</title>
+  <script type="module" src="/js/main.js "></script>
 </head>
 <body>
-  hello
+  <canvas id="screen" width="960" height="640"></canvas>
 </body>
 </html>
